plex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex-kube-plex
  namespace: plex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      containers:
      - env:
        - name: TZ
          value: America/Los_Angeles
        - name: PLEX_CLAIM
          value: claim-CHtheTzc7uTNeVn3HDiV
        - name: PLEX_UID
          value: "972"
        - name: PLEX_GID
          value: "568"
        image: plexinc/pms-docker:1.30.2.6563-3d4dc0cce
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /identity
            port: 32400
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        name: plex
        ports:
        - containerPort: 32400
          name: pms
          protocol: TCP
        - containerPort: 32400
          name: http
          protocol: TCP
        - containerPort: 32443
          name: https
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /identity
            port: 32400
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources: {}
        volumeMounts:
        - mountPath: /data
          name: data
        - mountPath: /config
          name: config
        - mountPath: /transcode
          name: transcode
          name: shared
        - mountPath: /cert
          name: cert
      serviceAccountName: plex
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: media
      - name: config
        persistentVolumeClaim:
          claimName: plex-data
      - emptyDir: {}
        name: transcode
      - emptyDir: {}
        name: shared
      - name: cert
        secret:
          defaultMode: 420
          secretName: plex-cert
